# voipglot-win

./: .gitignore  CROSS_COMPILE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile.cross  PYTORCH_SETUP.md  README.md  build-cross-macos.sh  build-docker.sh  build-integrated.ps1  build-windows.bat  build-windows.ps1  build.ps1  build.rs  build.sh  config.toml  package.json  rust-toolchain.toml  tauri.conf.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
docs/: architecture.md  build-run-instructions.md  configuration.md  coqui-tts-integration.md  features.md  local-translation.md  performance-optimizations.md  performance.md  poc-status.md  pre-initialization-architecture.md  providers.md  roadmap.md  troubleshooting.md  tts-model-caching.md  tts-performance-fix.md  tts-update-summary.md  usage.md  vosk-tts-fixes.md  whisper-integration.md
icons/: icon.icns
scripts/: setup-coqui.py  setup-ct2.py  setup-vosk.py
src/: config.rs  error.rs  index.html  lib.rs  main.rs  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/audio/: capture.rs  mod.rs  playback.rs  processing.rs
src/frontend/: index.html  main.js
src/translation/: local_translator.rs  mod.rs  stt.rs  translator_api.rs  tts.rs
tests/stt-vosk/: .gitignore  Cargo.toml  README.md  build.ps1  build.rs  config.toml
tests/stt-vosk/src/: lib.rs  main.rs
tests/translation-ct2/: .gitignore  Cargo.toml  README.md  build.ps1  config.toml
tests/translation-ct2/src/: main.rs
tests/tts-coqui/: .gitignore  Cargo.toml  README.md  build.ps1  config.toml  run.ps1
tests/tts-coqui/src/: main.rs
tests/vosk-rs/: .gitignore  BUILD_INSTRUCTIONS.md  build.ps1  test-build.ps1
tests/vosk-rs/crates/vosk-sys/: build.rs
tests/vosk-rs/crates/vosk/examples/: microphone.rs
tests/vosk-rs/crates/vosk/src/recognition/: results.rs
tests/whisper-rs/: Cargo.toml  transcript.txt
tests/whisper-rs/examples/: audio_transcription.rs  mic_transcription.rs
