[package]
name = "voipglot-win"
version = "0.1.0"
edition = "2021"
authors = ["VoipGlot Team"]
description = "Real-time audio translation for Windows gaming and VOIP applications"

[dependencies]
# Audio processing
cpal = "=0.16.0"
symphonia = { version = "=0.5.4", features = ["all"] }
dasp = "=0.11.0"

# Windows API bindings
windows = { version = "=0.56.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Media_Audio",
    "Win32_Media_MediaFoundation",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
] }

# Async runtime
tokio = { version = "=1.36.0", features = ["full"] }

# HTTP client for API calls
reqwest = { version = "=0.12.4", features = ["json"] }

# Serialization
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.114"

# Configuration
config = "=0.14.0"
toml = "=0.8.23"

# Logging
tracing = "=0.1.40"
tracing-subscriber = "=0.3.18"

# Error handling - Updated to compatible version
anyhow = "=1.0.98"
thiserror = "=1.0.56"

# Utilities
clap = { version = "=4.5.1", features = ["derive"] }
futures = "=0.3.30"

# Additional dependencies
base64 = "=0.22.0"
lazy_static = "=1.4.0"

# VOSK for Speech-to-Text
vosk = "0.2.0"

# CTranslate2 for translation
ct2rs = { version = "0.9", features = ["default"] }

# Simple logging for compatibility
env_logger = "0.10.0"
log = "0.4.20"

[target.'cfg(windows)'.dependencies]
# Windows-specific audio dependencies
windows = { version = "=0.56.0", features = [
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tokio-test = "=0.4.3"

[[bin]]
name = "voipglot-win"
path = "src/main.rs" 