[workspace]
members = ["src-tauri"]

# Root package configuration
[package]
name = "voipglot-win-workspace"
version = "0.1.0"
edition = "2021"
authors = ["VoipGlot Team"]
description = "Real-time audio translation for Windows gaming and VOIP applications - Tauri Workspace"
license = "MIT"

# Dummy library to satisfy Cargo requirements
[lib]
name = "voipglot_win_workspace"
path = "src/lib.rs"

[profile.fast-release]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 2 