[package]
name = "voipglot-win"
version = "0.1.0"
edition = "2021"
authors = ["VoipGlot Team"]
description = "Real-time audio translation for Windows gaming and VOIP applications"

# Binary configuration for Tauri
[[bin]]
name = "voipglot-win"
path = "src/main.rs"

# No build dependencies needed - using voipglot-core as Cargo dependency

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri dependencies
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# VoipGlot Core Library
voipglot-core = { path = "../../voipglot-core" }

# Async runtime
tokio = { version = "=1.36.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "=0.14.0"
toml = "=0.8.23"

# Logging
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }
tracing-appender = "=0.2.3"

# Error handling
anyhow = "1.0"
thiserror = "=1.0.56"

# Utilities
clap = { version = "=4.4.12", features = ["derive"] }
futures = "=0.3.30"
ctrlc = "=3.4.1"
dirs = "=5.0.1"
rand = "0.8"

# Additional dependencies
base64 = "=0.22.0"
lazy_static = "=1.4.0"

# Simple logging for compatibility
env_logger = "0.10"
log = "0.4"

[target.'cfg(windows)'.dependencies]
# Windows-specific audio dependencies
windows = { version = "=0.56.0", features = [
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
] }

[dev-dependencies]
tokio-test = "=0.4.3"

 
