[package]
name = "translation-ct2"
version = "0.1.0"
edition = "2021"

[dependencies]
ct2rs = { version = "0.9", features = ["default"] }  # Using default feature instead of cpu
anyhow = "1.0"  # Error handling
tokio = { version = "1.0", features = ["full"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_json = "1.0"  # JSON handling
toml = "0.8"  # Config file parsing
tracing = "0.1"  # Logging
tracing-subscriber = "0.3"  # Logging setup 